# qdoas

./: .gitignore  CHANGES  CITATION.cff  CMakeLists.txt  CMakePresets.json  DEVELOPER  LICENSE  README.md  all.pro  environment-cos6.yml  environment.yml  publiccode.yml  vcpkg-configuration.json  vcpkg.json
cmake/: FindCODA.cmake  FindQwt.cmake
cmdline/: CBatchEngineController.cpp  CBatchEngineController.h  CMakeLists.txt  LICENSE  cmdline.cpp  cmdline.pro  convxml.cpp  convxml.h  qdoasxml.cpp  qdoasxml.h
cmdline/glob_match/: LICENSE  README.md  glob_match.cpp  glob_match.h  glob_match.hpp  glob_match_caseless.c  glob_match_template.h  glob_match_test.c  glob_match_test.cpp  test_globs.cpp
common/: CConfigHandler.cpp  CConfigHandler.h  CConfigSubHandlerUtils.cpp  CConfigSubHandlerUtils.h  CEngineController.h  CEngineError.h  CEngineResponse.cpp  CEngineResponse.h  CHelpSystem.cpp  CHelpSystem.h  CImagePageData.cpp  CImagePageData.h  CMakeLists.txt  CPathMgr.cpp  CPathMgr.h  CPathSubHandler.cpp  CPathSubHandler.h  CPlotDataSet.cpp  CPlotDataSet.h  CPlotImage.h  CPlotPageData.cpp  CPlotPageData.h  CPlotProperties.cpp  CPlotProperties.h  CPreferences.cpp  CPreferences.h  CScaleControl.cpp  CScaleControl.h  CTablePageData.cpp  CTablePageData.h  CValidator.cpp  CValidator.h  CWAboutDialog.cpp  CWAboutDialog.h  CWFilteringEditor.cpp  CWFilteringEditor.h  CWPlotArea.cpp  CWPlotArea.h  CWPlotPage.cpp  CWPlotPage.h  (+15 more)
config/: CMakeLists.txt  QdoasVersion.h.in
convolution/: CConvConfigHandler.cpp  CConvConfigHandler.h  CConvConfigWriter.cpp  CConvConfigWriter.h  CConvEngineController.cpp  CConvEngineController.h  CMakeLists.txt  CWConvTabGeneral.cpp  CWConvTabGeneral.h  CWConvTabSlit.cpp  CWConvTabSlit.h  CWMain.cpp  CWMain.h  convolution.cpp  convolution.pro
custom-overlay/coda/: drop-xdr-dll.patch  fix-cmake-install.patch  fix-expat-mangling.patch  only-static-on-linux.patch  portfile.cmake  vcpkg.json
custom-overlay/hdf4/: cmake-installation.patch  portfile.cmake  vcpkg.json
doc/: QDOAS_algorithms.tex  QDOAS_biblio.bib  QDOAS_glossary.tex  QDOAS_inputfiles.tex  QDOAS_interface.tex  QDOAS_intro.tex  QDOAS_license.tex  QDOAS_manual.tex  QDOAS_output.tex  QDOAS_properties.tex  QDOAS_quickstart.tex  QDOAS_title.tex  QDOAS_tools.tex  QDOAS_troubleshooting.tex
doc/img/: GoodCalib_NO2.tif  GoodCalib_Residual.tif  Kurucz_FWHM.tif  Kurucz_Fit.tif  Kurucz_Shift.tif  MarquardtLevenberg_hypersurface.tif  WrongCalib_NO2.tif  WrongCalib_Residual.tif  draw_lineshapes.py  least_squares.fig  least_squares.pdf_t  overall_structure.fig  overall_structure.pdf_t  slant_column_fitting.fig  slant_column_fitting.pdf_t  (+2 more)
engine/: CMakeLists.txt  actn-read.c  analyse.c  analyse.h  apex_read.cpp  apex_read.h  ascii-qdoas.c  ascii.c  bin_read.c  bin_read.h  bira-airborne-read.c  ccd-read.c  comdefs.h  constants.h  curfit.c  curfit.h  date_util.cpp  date_util.h  debug.c  dir_iter.h  doas.h  easoeread.c  engine.c  engine.h  engine.pro  engine_context.h  engine_xsconv.c  engine_xsconv.h  erf.c  erf.h  error.c  filter.c  filter.h  fit_properties.c  fit_properties.h  frm4doas_read.cpp  frm4doas_read.h  fvoigt.c  gdp_bin_read.c  gdp_bin_read.h  (+95 more)
engine/nelmin/: nelmin.c
engine/nelmin/include/: nelmin.h
mediator/: CMakeLists.txt  mediate.c  mediate.h  mediate_analysis_window.c  mediate_analysis_window.h  mediate_common.c  mediate_common.h  mediate_convolution.c  mediate_convolution.h  mediate_general.h  mediate_limits.h  mediate_project.c  mediate_project.h  mediate_request.h  mediate_response.cpp  mediate_response.h  mediate_ring.c  mediate_ring.h  mediate_types.h  mediate_usamp.c  mediate_usamp.h  mediate_xsconv.c  mediate_xsconv.h  mediate_xsconv_output_netcdf.cpp  mediate_xsconv_output_netcdf.h  mediator.pro  utils.cpp
nelmin/: CMakeLists.txt
qdoas/: CConfigStateMonitor.cpp  CConfigStateMonitor.h  CDoasTable.cpp  CDoasTable.h  CEngineRequest.cpp  CEngineRequest.h  CEngineThread.cpp  CEngineThread.h  CMakeLists.txt  CMultiPageTableModel.cpp  CMultiPageTableModel.h  CNavigationPanel.cpp  CNavigationPanel.h  CProjectConfigAnalysisWindowSubHandlers.cpp  CProjectConfigAnalysisWindowSubHandlers.h  CProjectConfigItem.cpp  CProjectConfigItem.h  CProjectConfigSubHandlers.cpp  CProjectConfigSubHandlers.h  CProjectConfigTreeNode.cpp  CProjectConfigTreeNode.h  CProjectTreeClipboard.cpp  CProjectTreeClipboard.h  CQdoasConfigHandler.cpp  CQdoasConfigHandler.h  CQdoasConfigWriter.cpp  CQdoasConfigWriter.h  CQdoasEngineController.cpp  CQdoasEngineController.h  CSession.cpp  CSession.h  CViewCrossSectionData.h  CWActiveContext.cpp  CWActiveContext.h  CWAnalysisWindowDoasTables.cpp  CWAnalysisWindowDoasTables.h  CWAnalysisWindowPropertyEditor.cpp  CWAnalysisWindowPropertyEditor.h  CWEditor.h  CWMain.cpp  (+55 more)
qdoas/Help/: index.html  uvvis.css
qdoas/Help/Analysis/: Analysis.html  Analysis_Gaps.html  Analysis_Molecules.html  Analysis_Output.html  Analysis_Polynomial.html  Analysis_Predefined.html  Analysis_Shift.html
qdoas/Help/GUI/: GUI.html  GUI_Plot.html  GUI_Projects.html  GUI_Sites.html  GUI_Symbols.html
qdoas/Help/Project/: Project.html  Project_Analysis.html  Project_Calibration.html  Project_Display.html  Project_Filtering.html  Project_Instrumental.html  Project_Output.html  Project_Selection.html  Project_Slit.html  Project_Undersampling.html
qdoas/Help/Tools/: Tools.html  Tools_Convolution.html  Tools_Convolution_Filtering.html  Tools_Convolution_General.html  Tools_Convolution_Slit.html  Tools_Doascl.html  Tools_Ring.html  Tools_Usamp.html
resources/: qdoas.icns  qdoas.plist  qdoas.qrc  ring.qrc
ring/: CMakeLists.txt  CRingConfigHandler.cpp  CRingConfigHandler.h  CRingConfigWriter.cpp  CRingConfigWriter.h  CRingEngineController.cpp  CRingEngineController.h  CWMain.cpp  CWMain.h  CWRingTabGeneral.cpp  CWRingTabGeneral.h  ring.pro
usamp/: CMakeLists.txt  CUsampConfigHandler.cpp  CUsampConfigHandler.h  CUsampConfigWriter.cpp  CUsampConfigWriter.h  CUsampEngineController.cpp  CUsampEngineController.h  CWMain.cpp  CWMain.h  CWUsampTabGeneral.cpp  CWUsampTabGeneral.h  usamp.pro  usamptool.cpp
